# GameKyMonThanToc

./: .gitignore  CMakeLists.txt  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_GUIDE.md  GDD.md  INDEX.md  Ke Hoạch PBL_ 2_Dự án CSLT_2025_2026.docx  Mô Tả Chi Tiết Dự Án Game KỲ MÔN THẦN TỐC.docx  PHASE_2_PROTOTYPING.md  PHASE_2_SUMMARY.md  PREPRODUCTION.md  README.md  TECHNICAL_SETUP.md  Timeline Chi tiết Phát triển Dự án Game _Kỳ Môn Thần Tốc_.docx  build.bat  build.ps1
Bai_1_Minh_Tri/: ~$i toán 1 Minh Trí - Khai Mở Tri Thức Trận Đồ.docx
Bai_1_Minh_Tri/.cph/: .Bai1.cpp_4d672c064a95144d9a061adb02e90c3c.prob
Bai_1_Minh_Tri/tests/input/: input00.txt  input01.txt  input03.txt  input09.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input17.txt  input18.txt
Bai_1_Minh_Tri/tests/output/: output01.txt  output02.txt  output03.txt  output04.txt  output06.txt  output07.txt  output10.txt  output11.txt  output12.txt  output14.txt  output15.txt  output16.txt  output17.txt  output19.txt  output20.txt
Bai_2_Dinh_Menh/: Bai2.cpp
Bai_2_Dinh_Menh/.cph/: .Bai2.cpp_459b04959b95f417874814cd1d868eaa.prob  .Bai2.cpp_82c7fe972ffac2ceccbf7cd10421c1e9.prob
Bai_2_Dinh_Menh/tests/input/: input00.txt  input01.txt  input02.txt  input03.txt  input04.txt  input05.txt  input06.txt  input07.txt  input08.txt  input09.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input20.txt  input21.txt  input22.txt  input23.txt  input24.txt  input25.txt  input26.txt  input27.txt  input28.txt  input29.txt  input30.txt  input31.txt  input32.txt  input33.txt  input34.txt  input35.txt  input36.txt  input37.txt  input38.txt
Bai_2_Dinh_Menh/tests/output/: output15.txt  output38.txt
Bai_3_Nhap_The/: Bài toán 3 Nhập Thế - Game Kỳ Môn Thần Tốc.docx
Bai_3_Nhap_The/.cph/: .Bai3.cpp_1eaeae9b97660fbfde99dc77fa3a222d.prob  .Bai3.cpp_27266c9c5fe9d90be0073926544b1458.prob
Bai_3_Nhap_The/tests/: 22.in  23.in  24.in  25.in  26.in  26.out  27.in  28.in  29.in  29.out  30.in  30.out  31.in  31.out  32.in  33.in  33.out  34.in  35.in  36.in  36.out  37.in  37.out  38.in  39.in  40.in  41.in  42.in  42.out  43.in  44.in  45.in  45.out  46.in  47.in  47.out  48.in  48.out  49.in  50.in  (+33 more)
Bai_3_Nhap_The/tests/input/: input02.txt  input05.txt  input14.txt  input15.txt  input16.txt  input17.txt
Bai_3_Nhap_The/tests/output/: output09.txt  output10.txt  output11.txt  output13.txt  output15.txt  output16.txt  output17.txt  output18.txt  output20.txt
assets/levels/: level12.txt  level2.txt  level21.txt  level22.txt  level3.txt
assets/maps/: level1.txt
docs/: PREPRODUCTION_CHECKLIST.md  PROJECT_COMPLETION.md  STATUS_REPORT.md
docs/Bai_1_Minh_Tri/: Bai1.cpp  Bài toán 1 Minh Trí - Khai Mở Tri Thức Trận Đồ.docx
docs/Bai_1_Minh_Tri/.cph/: .Bai1.cpp_380ad2dd93a17321713a606e6f6c0d94.prob  .Bai1.cpp_a9b8120168a77b17c18de60ab6894421.prob
docs/Bai_1_Minh_Tri/tests/input/: input06.txt  input09.txt
docs/Bai_1_Minh_Tri/tests/output/: output02.txt  output03.txt  output05.txt  output08.txt  output09.txt  output11.txt  output12.txt  output13.txt  output14.txt  output16.txt  output18.txt  output20.txt
docs/Bai_2_Dinh_Menh/: Bai2.cpp  Bài toán 2 Định Mệnh - Vạch Ra Thiên Mệnh.docx
docs/Bai_2_Dinh_Menh/.cph/: .Bai2.cpp_9e36d74acc8657d7493f47c5beddf584.prob
docs/Bai_2_Dinh_Menh/tests/input/: input01.txt  input03.txt  input04.txt  input05.txt  input06.txt  input07.txt  input10.txt  input11.txt  input14.txt  input15.txt  input17.txt  input18.txt
docs/Bai_2_Dinh_Menh/tests/output/: output04.txt  output05.txt  output08.txt  output09.txt  output14.txt  output17.txt
docs/Bai_3_Nhap_The/: Bai3.cpp
docs/Bai_3_Nhap_The/.cph/: .Bai3.cpp_dea6a3a17aebdf23cd89dee18acc7a8f.prob
docs/Bai_3_Nhap_The/tests/input/: input07.txt  input08.txt  input13.txt  input20.txt
docs/Bai_3_Nhap_The/tests/output/: output06.txt  output12.txt  output18.txt
include/: Camera.h  Config.h  GameEngine.h  GameObject.h  GameStateManager.h  IGameState.h  Map.h  ParticleSystem.h  PlayState.h  Player.h  SoundManager.h  TestState.h  TextureManager.h  ThienCoEngine.h  queue.h  stack.h  vecto.h
include/Algorithms/: ThienCoEngine.h
include/Audio/: SoundManager.h
include/Core/: Config.h  GameEngine.h
include/Entities/: GameObject.h  Map.h  Player.h
include/Graphics/: ParticleSystem.h  TextureManager.h
src/: BaiToan1.cpp  BaiToan2.cpp  BaiToan3.cpp  GameEngine.cpp  GameStateManager.cpp  Map.cpp  ParticleSystem.cpp  PlayState.cpp  Player.cpp  SoundManager.cpp  TestState.cpp  TextureManager.cpp  ThienCoEngine.cpp  main.cpp
src/Algorithms/: ThienCoEngine.cpp
src/Audio/: SoundManager.cpp
src/Core/: GameEngine.cpp
src/Entities/: Map.cpp  Player.cpp
src/Graphics/: ParticleSystem.cpp  TextureManager.cpp
